editors/tree-sitter/grammar.js
    source_file: ($) => repeat($._declaration),

    // Only these appear at the top level of a file; `parse_file` in
    // src/parser/parser.rs rejects everything else, including `let`.
    _declaration: ($) =>
      choice(
        $.attribute,
        $.import_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.impl_block,
        $.dylib_block,
        $.host_block,
      ),

    // ------------------------------------------------------------------
    // Declarations
    // ------------------------------------------------------------------

    // `@cfg(...)` in front of a declaration, a method or a statement. The
    // parser reads it as a prefix of what follows; here it is a sibling node,
    // which is all highlighting needs.
    function_declaration: ($) =>
      seq(
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameter_list),
        optional(field('return_type', $.return_type)),
        field('body', choice($.block, $.expression_body)),
      ),

    // `=> expr;`: a body that evaluates to one expression, the same as
    // `{ return expr; }`.
    parameter_list: ($) => seq('(', sepByTrailing(',', $.parameter), ')'),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
      ),

    _type: ($) => choice($._atomic_type, $.union_type),

    block: ($) => seq('{', repeat($._statement), optional($._expression), '}'),

    _statement: ($) =>
      choice(
        $.attribute,
        $.let_declaration,
        $.assignment_statement,
        $.expression_statement,
        $.return_statement,
        $.throw_statement,
        $.break_statement,
        $.continue_statement,
        $.while_statement,
        $.for_statement,
        $.loop_statement,
        $.try_statement,
        $.block,
        $.struct_declaration,
        $.enum_declaration,
      ),

    // A block-bodied expression stands alone as a statement; anything else
    // needs the semicolon.
    expression_statement: ($) =>
      choice(seq($._expression, ';'), prec(1, $.if_expression), prec(1, $.match_expression)),

    let_declaration: ($) =>
      seq(
        'let',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expression),
        ';',
      ),

    assignment_statement: ($) =>
      seq(
        field('left', $._expression),
        field(
          'operator',
          choice('=', '+=', '-=', '*=', '/=', '%=', '^=', '&=', '|=', '^^=', '<<=', '>>='),
        ),
        field('right', $._expression),
        ';',
      ),

    return_statement: ($) => seq('return', optional(field('value', $._expression)), ';'),

    // `throw "kind";` raises an error of that kind.
    break_statement: (_) => seq('break', ';'),

    continue_statement: (_) => seq('continue', ';'),

    while_statement: ($) =>
      seq('while', field('condition', $._expression), field('body', $.block)),

    // `for x in list`, `for i in low..high`, and `for i in ..high`, which
    // counts from zero.
    for_statement: ($) =>
      seq(
        'for',
        field('binding', $.identifier),
        'in',
        field('iterable', choice($.range_expression, $._expression)),
        field('body', $.block),
      ),

    range_expression: ($) =>
      seq(optional(field('start', $._expression)), '..', field('end', $._expression)),

    loop_statement: ($) => seq('loop', field('body', $.block)),

    // A `match` stands alone as a statement or gives a value where one is
    // expected, the way an `if` does.
    match_expression: ($) =>
      seq('match', field('value', $._expression), field('body', $.match_arm_list)),

    // An arm is `pattern => { ... }`, or `pattern => expr` followed by a `,`
    // that the last arm may leave off.
    match_arm_list: ($) =>
      seq(
        '{',
        repeat(choice($.match_arm, alias($._expression_match_arm, $.match_arm))),
        optional(alias($._last_match_arm, $.match_arm)),
        '}',
      ),

    match_arm: ($) => seq(field('pattern', $.match_pattern), '=>', field('body', $.block)),

    _expression_match_arm: ($) =>
      seq(field('pattern', $.match_pattern), '=>', field('value', $._expression), ','),

    _last_match_arm: ($) =>
      seq(field('pattern', $.match_pattern), '=>', field('value', $._expression)),

    // A pattern is an expression: an enum variant with bindings, a qualified
    // name, or a literal compared for equality. `|` separates alternatives and
    // binds looser than any operator inside one, so `1 | 2` is two patterns
    // rather than bitwise or; `(a | b)` is the or. `_` is the wildcard, and it
    // comes last.
    match_pattern: ($) =>
      seq(
        field('alternative', $._expression),
        repeat(prec(PREC.bit_or + 1, seq('|', field('alternative', $._expression)))),
      ),

    try_statement: ($) => seq('try', field('body', $.block), repeat1($.catch_clause)),

    // `catch "kind" { ... }` handles one error kind; `catch e { ... }` binds
    // every remaining kind to a variable.
    catch_clause: ($) =>
      seq(
        'catch',
        field('pattern', choice($.string_literal, $.identifier)),
        field('body', $.block),
      ),

    // ------------------------------------------------------------------
    // Expressions
    // ------------------------------------------------------------------

    _expression: ($) =>
      choice(
        // A name, plain or namespaced, is an expression at the same level as
        // everything that continues it: a call, a struct literal, a longer
        // path, a type argument list. Holding them level is what keeps each
        // reading a candidate until the token that settles it, so `a < b` and
        // `a<b>(c)` are both still in play at the `<`, and `Colour::Red` in an
        // `if` header is still a value and not the start of a literal.
        prec(PREC.postfix, $.identifier),
        prec(PREC.postfix, $.qualified_identifier),
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.array_literal,
        $.map_literal,
        $.struct_literal,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.slice_expression,
        $.propagate_expression,
        $.unary_expression,
        $.binary_expression,
        $.type_test_expression,
        $.cast_expression,
        $.parenthesized_expression,
        $.closure_expression,
        $.if_expression,
        $.match_expression,
        $.macro_invocation,
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('-', '!', '~')), field('operand', $._expression)),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.equality, '=='],
        [PREC.equality, '!='],
        [PREC.comparison, '<'],
        [PREC.comparison, '<='],
        [PREC.comparison, '>'],
        [PREC.comparison, '>='],
        [PREC.bit_or, '|'],
        [PREC.bit_xor, '^^'],
        [PREC.bit_and, '&'],
        [PREC.shift, '<<'],
        [PREC.shift, '>>'],
        [PREC.additive, '+'],
        [PREC.additive, '-'],
        [PREC.multiplicative, '*'],
        [PREC.multiplicative, '/'],
        [PREC.multiplicative, '%'],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            Number(precedence),
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
        prec.right(
          PREC.power,
          seq(field('left', $._expression), field('operator', '^'), field('right', $._expression)),
        ),
      );
    },

    // `v is int` tests a value's type and `v is Some(x)` its variant; `v as
    // int` is the checked downcast. Both bind at the level of the comparisons
    // and take a type on their right, so `v as int + 1` adds to the downcast.
    // A name with an argument list after `is` can only be a variant pattern.
    call_expression: ($) =>
      prec(
        PREC.postfix,
        choice(
          seq(field('function', $._callee), field('arguments', $.arguments)),
          prec.dynamic(
            PREC.type_arguments,
            seq(
              field('function', choice($.identifier, $.qualified_identifier)),
              field('type_arguments', $.type_arguments),
              field('arguments', $.arguments),
            ),
          ),
        ),
      ),

    // What a call applies to. A call attaches to the expression in front of it,
    // so what another call or an index handed back is called where it stands.
    // A type argument list only reads on a name, so that branch keeps its own
    // narrower callee.
    _callee: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.call_expression,
        $.index_expression,
        $.parenthesized_expression,
      ),

    method_call_expression: ($) =>
      prec(
        PREC.postfix,
        choice(
          seq(
            field('receiver', $._expression),
            '.',
            field('method', choice($.identifier, $.qualified_identifier)),
            field('arguments', $.arguments),
          ),
          prec.dynamic(
            PREC.type_arguments,
            seq(
              field('receiver', $._expression),
              '.',
              field('method', choice($.identifier, $.qualified_identifier)),
              field('type_arguments', $.type_arguments),
              field('arguments', $.arguments),
            ),
          ),
        ),
      ),

    field_expression: ($) =>
      prec(PREC.postfix, seq(field('object', $._expression), '.', field('field', $.identifier))),

    // `x?`: the value in a `Some` or an `Ok`, or an early return of the `None`
    // or the `Err`.
    index_expression: ($) =>
      prec(PREC.postfix, seq(field('object', $._expression), '[', field('index', $._expression), ']')),

    // `a[low..high]`, `a[..high]` from the start, and `a[low..]` to the end.
    arguments: ($) => seq('(', sepByTrailing(',', $._expression), ')'),

    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $._expression),
          field('consequence', $.block),
          repeat($.else_if_clause),
          optional($.else_clause),
        ),
      ),

    qualified_identifier: ($) =>
      prec(
        PREC.postfix,
        seq(
          field('module', choice($.identifier, $.qualified_identifier)),
          optional(field('type_arguments', $.type_arguments)),
          '::',
          field('name', $.identifier),
        ),
      ),

    // ------------------------------------------------------------------
    // Tokens
    // ------------------------------------------------------------------

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: (_) => /[0-9]+/,

    // A leading digit is optional, so `.5` is a float; a trailing point is not.
    // An exponent makes a float with or without a point, as in `1e3`.
    float_literal: (_) =>
      /[0-9]*\.[0-9]+([eE][+-]?[0-9]+)?|[0-9]+[eE][+-]?[0-9]+/,

    string_literal: ($) =>
      seq('"', repeat(choice($.escape_sequence, token.immediate(/[^"\\]+/))), '"'),

    // `\n`, `\t`, `\r`, `\\`, `\"`, and `\0` are translated; any other
    // backslash pair is kept as written.
    boolean_literal: (_) => choice('true', 'false'),

    null_literal: (_) => 'null',
